# helm-app

./: Makefile  README.md  pyproject.toml
.github/workflows/: helm-app.yaml
app/: main.py
helm/: Chart.yaml  README.md  app-readme.md  values.yaml
helm/templates/: NOTES.txt  deployment.yaml  service.yaml
